--- a/hackfest/src/components/Navbar.css
+++ b/hackfest/src/components/Navbar.css
@@ -1,7 +1,8 @@
 nav{
     width: 100%;
+    height: 7vh;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-be;
 }
 .logo{
     width: 20%;
@@ -17,7 +18,8 @@ nav{
     background-color: aliceblue;
     display: flex;
     border-radius: 20px;
-    justify-content: center;
+    margin-left: 20px;
+    justify-content: space-around;
     align-items: center;
 }
 .nav-links li{
@@ -32,6 +34,9 @@ nav{
 }
 .profile{
     width: 20%;
+    background-color: aliceblue;
+    border-radius: 20px;
+    margin-left: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
