Update button styles in Interface.css to set fixed width

--- a/hackfest/src/components/Interface.css
+++ b/hackfest/src/components/Interface.css
@@ -23,7 +23,7 @@ button{
     background-color: #2555a2;
     color: white;
     border: none;
-    padding: 10px 20px;
+    width: 150px;
     border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
