--- a/hackfest/src/components/Interface.css
+++ b/hackfest/src/components/Interface.css
@@ -13,7 +13,7 @@
     justify-content: center;
     width: 90vh;
     height: 60vh;
-    background-color: rgba(42, 127, 44, 0.812);
+    background: linear-gradient(to top, #086a06, #04bc04ce);
     border-radius: 20px;
 }
 .options{
