--- a/hackfest/src/index.css
+++ b/hackfest/src/index.css
@@ -1,5 +1,5 @@
 body{
-  background-image: url('./images/background.png');
+  background-image: url('./images/farm.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
