--- a/hackfest/src/components/Navbar.css
+++ b/hackfest/src/components/Navbar.css
@@ -1,53 +1,59 @@
-nav{
-    width: 100%;
-    height: 7vh;
-    display: flex;
-    justify-content: space-be;
+nav {
+  width: 100%;
+  height: 7vh;
+  display: flex;
+  justify-content: space-be;
 }
-.logo{
-    width: 20%;
-    background-color: aliceblue;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 20px;
+.logo {
+  width: 20%;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
 }
-.nav-links{
-    text-decoration: none;
-    width: 60%;
-    background-color: aliceblue;
-    display: flex;
-    border-radius: 20px;
-    margin-left: 20px;
-    justify-content: space-around;
-    align-items: center;
+.nav-links {
+  text-decoration: none;
+  width: 60%;
+  background-color: aliceblue;
+  display: flex;
+  border-radius: 20px;
+  margin-left: 20px;
+  justify-content: space-around;
+  align-items: center;
 }
-.nav-links li{
-    list-style: none;
+.nav-links li {
+  list-style: none;
 }
-.nav-links li a{
-    text-decoration: none;
-    color: black;
-    padding: 10px 20px;
-    font-size: 18px;
-    font-weight: bold;
+.nav-links li a {
+  text-decoration: none;
+  color: black;
+  padding: 10px 20px;
+  font-size: 18px;
+  font-weight: bold;
 }
-.profile{
-    width: 20%;
-    background-color: aliceblue;
-    border-radius: 20px;
-    margin-left: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.profile {
+  width: 20%;
+  background-color: aliceblue;
+  border-radius: 20px;
+  margin-left: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.profile li{
-    list-style: none;
+.profile li {
+  list-style: none;
 }
-.profile li a{
-    text-decoration: none;
-    color: black;
-    padding: 10px 20px;
-    font-size: 18px;
-    font-weight: bold;
+.profile li a {
+  text-decoration: none;
+  color: black;
+  padding: 10px 20px;
+  font-size: 18px;
+  font-weight: bold;
+}
+.img {
+  width: 10px;
+  height: 10px;
+  background-image: url("./images/logo.png");
+  background-size: contain;
 }
