--- a/hackfest/src/components/Navbar.css
+++ b/hackfest/src/components/Navbar.css
@@ -6,7 +6,8 @@ nav {
 }
 .logo {
   width: 20%;
-  background-color: black;
+  background-color: white;
+  color: black;
   display: flex;
   justify-content: center;
   align-items: center;
