--- a/hackfest/src/components/Card.css
+++ b/hackfest/src/components/Card.css
@@ -9,6 +9,7 @@
     margin: 10vh 4vh 0vh 4vh;
     border-radius: 10px;
     overflow: hidden;
+    margin-bottom: 20px;
 }
 button{
     width:20%;
