--- a/hackfest/src/components/Login.css
+++ b/hackfest/src/components/Login.css
@@ -6,15 +6,14 @@
     align-items: center;
 }
 .wrapper{
-    width: 420px;
+    width: 100%;
     background: transparent;
     border:2px solid rgba(255, 255, 255, .2) ;
     backdrop-filter:blur(20px) ;
     box-shadow:0 0 10px rgba(0, 0, 0, .2) ;
     color: #fff;
     border-radius:10px ;
-    padding:20px ;
-    margin-left: 500px;
+    
 
 }
 .red{
@@ -27,20 +26,28 @@
 
 .wrapper .input-box{
     position: relative;
-    width: 100%;
-    height: 50px;
-    margin: 30px 0;
+    width: 85%;
+    margin: 30px ;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-
+form{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 .input-box input{
-    width: 100%;
-    height: 100%;
+    
+  color: #fff;
     background: transparent;
     border: 2px solid rgba(255, 255, 255, .2);
     border-radius: 40px;
     font-size: 16px;
-    color: #fff;
-    padding: 20px 20px 3px 1px;
+  
+    
 }
 
 .input-box input::placeholder{
