--- a/hackfest/src/components/Register.css
+++ b/hackfest/src/components/Register.css
@@ -27,7 +27,7 @@
     border: 2px solid rgba(255, 255, 255, 0.2);
     border-radius: 40px;
     font-size: 16px;
-    color: #2f9407;
+    color: #fff;
     padding: 20px 45px 20px 20px;
     transition: all 0.3s ease;
     text-align: center; /* Center the input text */
