--- a/hackfest/src/components/Navbar.css
+++ b/hackfest/src/components/Navbar.css
@@ -1,8 +1,9 @@
 nav {
+  margin-top: 10px;
   width: 100%;
-  height: 7vh;
+  height: 5vh;
   display: flex;
-  justify-content: space-be;
+  justify-content: space-between;
 }
 .logo {
   width: 20%;
@@ -31,7 +32,7 @@ nav {
   color: black;
   padding: 10px 20px;
   font-size: 18px;
-  font-weight: bold;
+ 
 }
 .profile {
   width: 20%;
@@ -50,7 +51,7 @@ nav {
   color: black;
   padding: 10px 20px;
   font-size: 18px;
-  font-weight: bold;
+
 }
 .img {
   width: 10px;
