--- a/hackfest/src/components/Footer.css
+++ b/hackfest/src/components/Footer.css
@@ -1,11 +1,15 @@
 .footer{
     width: 100%;
-    background: white;
+    background: #f0f8ffd8;
     padding: 20px 0;
-  
+    height: 20vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.2);
     text-align: center;
     color: black;
+    border-radius: 10px 10px 0 0;
 }
 
 .footer-container{
