--- a/hackfest/src/components/Navbar.css
+++ b/hackfest/src/components/Navbar.css
@@ -4,10 +4,11 @@ nav {
   height: 5vh;
   display: flex;
   justify-content: space-between;
+  position: fixed;
 }
 .logo {
   width: 20%;
-  background-color: white;
+  background-color: #f0f8ff7d;
   color: black;
   display: flex;
   justify-content: center;
@@ -17,7 +18,7 @@ nav {
 .nav-links {
   text-decoration: none;
   width: 60%;
-  background-color: aliceblue;
+  background-color: #f0f8ff7d;
   display: flex;
   border-radius: 20px;
   margin-left: 20px;
@@ -36,7 +37,7 @@ nav {
 }
 .profile {
   width: 20%;
-  background-color: aliceblue;
+  background-color: #f0f8ff7d;
   border-radius: 20px;
   margin-left: 20px;
   display: flex;
