--- a/hackfest/src/components/Home.css
+++ b/hackfest/src/components/Home.css
@@ -10,13 +10,13 @@
     background: linear-gradient(to top, #ffb347, #ffcc33);
     padding: 30px;
     width: 350px;
-    margin: 40px auto;
+   
     border-radius: 25px;
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.2);
     position: relative;
     font-family: 'Segoe UI', sans-serif;
     text-align: center;
-    margin-right: 2vh;
+  
   }
 
 
@@ -96,7 +96,12 @@
     font-weight: bold;
     text-shadow: 2px 2px #000;
   }
-  
+  .welcome-image{
+    position: relative;
+    right: -1000px;
+    top:-200px;
+    
+  }
   .weather-date p {
     margin: 12px 0;
     font-size: 16px;
@@ -128,7 +133,13 @@
     font-size: 18px;
     margin-top: 5px;
   }
-
+.container{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
 
 .container1 {
   width: 100%;
@@ -139,7 +150,9 @@
   color: black; 
   padding: 20px;
   box-sizing: border-box;
-  background: transparent 
+  background: transparent ;
+  position: relative;
+  top: -200px;
 }
 
 .scheme-hub {
@@ -167,8 +180,19 @@
       margin: 10px;
   }
 }
-
-
+.welcome{
+  width: 100%;
+    margin-left: 20px;
+}
+.welcome-text{
+    font-size: 30px;
+    font-weight: bold;
+    margin-bottom: 20px;
+    color: white;
+    text-shadow: 1px 1px #000;
+    margin-top: 200px;
+    margin-left: 150px;
+}
 
   
 
